deployment/aivis-chan-bot-all.yaml
---
# aivis-chan-bot-1st
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-1st
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-1st
  template:
    metadata:
      labels:
        app: aivis-chan-bot-1st
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-1st
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-1st:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3002
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-1st-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-1st-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-1st
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 31001
  selector:
    app: aivis-chan-bot-1st
---
# aivis-chan-bot-2nd
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-2nd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-2nd
  template:
    metadata:
      labels:
        app: aivis-chan-bot-2nd
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-2nd
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-2nd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3003
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-2nd-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-2nd-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-2nd
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32002
  selector:
    app: aivis-chan-bot-2nd
---
# aivis-chan-bot-3rd
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-3rd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-3rd
  template:
    metadata:
      labels:
        app: aivis-chan-bot-3rd
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-3rd
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-3rd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3004
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-3rd-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-3rd-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-3rd
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32003
  selector:
    app: aivis-chan-bot-3rd
---
# aivis-chan-bot-4th
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-4th
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-4th
  template:
    metadata:
      labels:
        app: aivis-chan-bot-4th
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-4th
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-4th:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3005
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-4th-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-4th-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-4th
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32004
  selector:
    app: aivis-chan-bot-4th
---
# aivis-chan-bot-5th
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-5th
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-5th
  template:
    metadata:
      labels:
        app: aivis-chan-bot-5th
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-5th
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-5th:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3006
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-5th-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-5th-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-5th
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32005
  selector:
    app: aivis-chan-bot-5th
---
# aivis-chan-bot-6th
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aivis-chan-bot-6th
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: aivis-chan-bot-6th
  template:
    metadata:
      labels:
        app: aivis-chan-bot-6th
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: aivis-chan-bot-6th
          image: ghcr.io/alexandergg-0520/aivis-chan-bot-6th:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 3007
          volumeMounts:
            - name: bot-data
              mountPath: /usr/src/app/data
            - name: config-files
              mountPath: /usr/src/app/data/config.json
              subPath: config.json
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: bot-data
          hostPath:
            path: /home/user/aivis-chan-bot-6th-data
            type: DirectoryOrCreate
        - name: config-files
          configMap:
            name: aivis-chan-bot-6th-config
---
apiVersion: v1
kind: Service
metadata:
  name: aivis-chan-bot-6th
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32006
  selector:
    app: aivis-chan-bot-6th
