deployment/nginx-reverse-proxy-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-reverse-proxy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  tls:
  - hosts:
    - aivis-chan-bot.com
    secretName: nginx-reverse-proxy-tls
  rules:
  - host: aivis-chan-bot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-reverse-proxy
            port:
              number: 80
